--- a/environments/local-minikube-us-east-0/kustomization.yaml
+++ b/environments/local-minikube-us-east-0/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 
 resources:
   - ../../cluster
-  - ../local/resources
+#  - ../local/resources
 
 patches:
   - target:
@@ -29,23 +29,23 @@ patches:
         value:
           environments/local-minikube-us-east-0/services/*.json
 
-  - target:
-      kind: Application
-      name: external-secrets-cluster-secrets
-    patch: |
-      - op: add
-        path: /spec/source/kustomize
-        value:
-          patches:
-          - target:
-              kind: ClusterSecretStore
-              name: vault-admin
-            patch: |
-              - op: add
-                path: /spec/provider/vault/server
-                value:
-                  http://vault.vault.svc.cluster.local:8200
-              - op: add
-                path: /spec/provider/vault/auth/kubernetes/mountPath
-                value:
-                  local-minikube-us-east-0
+#  - target:
+#      kind: Application
+#      name: external-secrets-cluster-secrets
+#    patch: |
+#      - op: add
+#        path: /spec/source/kustomize
+#        value:
+#          patches:
+#          - target:
+#              kind: ClusterSecretStore
+#              name: vault-admin
+#            patch: |
+#              - op: add
+#                path: /spec/provider/vault/server
+#                value:
+#                  http://vault.vault.svc.cluster.local:8200
+#              - op: add
+#                path: /spec/provider/vault/auth/kubernetes/mountPath
+#                value:
+#                  local-minikube-us-east-0
