add config values for target kind and name in kustomize values template patch

--- a/cluster/services.yaml
+++ b/cluster/services.yaml
@@ -102,7 +102,7 @@ spec:
           patches:
           {{- range $kustomization:= .value_kustomizations }}
             - target:
-                kind: '{{ $kustomization.target_kind }}'
+                kind: ClusterSecretStore
                 name: {{ $kustomization.target_name }}
               patch: |
                 - op: add
