--- a/cluster/services.yaml
+++ b/cluster/services.yaml
@@ -102,7 +102,7 @@ spec:
           patches:
           {{- range $kustomization:= .value_kustomizations }}
             - target:
-                kind: ClusterSecretStore
+                {{ $kustomization.target_kind }}
                 name: {{ $kustomization.target_name }}
               patch: |
                 - op: add
