--- a/cluster/kustomization.yaml
+++ b/cluster/kustomization.yaml
@@ -3,7 +3,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: argocd
 resources:
-  - argocd.yaml
+  - argocd
+#  - argocd.yaml
   - default-project.yaml
   - cluster.yaml
   - services.yaml
