test merge generator without merge keys defined

--- a/cluster/services.yaml
+++ b/cluster/services.yaml
@@ -11,8 +11,8 @@ spec:
   goTemplate: true
   generators:
     - merge:
-#        mergeKeys:
-#          - name
+        mergeKeys:
+          - name
         generators:
           - git:
               files:
