--- a/cluster/services.yaml
+++ b/cluster/services.yaml
@@ -117,9 +117,9 @@ spec:
                       valueFrom:
                         secretKeyRef:
                           name: cluster-metadata
-                          key: wrong-nodes
+                          key: management_node_group_name
                     - name: tolerations[0].value
                       valueFrom:
                         secretKeyRef:
                           name: cluster-metadata
-                          key: wrong
+                          key: management_node_group_role
