--- a/cluster/argocd/kustomization.yaml
+++ b/cluster/argocd/kustomization.yaml
@@ -7,6 +7,10 @@ resources:
   - argocd-ns.yaml
   - github.com/argoproj/argo-cd/manifests/core-install?ref=v2.12.6
 
+patchesStrategicMerge:
+  - argocd-repo-server-deploy.yaml
+  - argocd-cm.yaml
+
 configMapGenerator:
   - behavior: merge
     literals:
