test vault plugin

--- a/cluster/argocd/kustomization.yaml
+++ b/cluster/argocd/kustomization.yaml
@@ -8,9 +8,6 @@ resources:
   - github.com/argoproj/argo-cd/manifests/core-install?ref=v2.12.6
   - cmp-plugin.yaml
 
-patchesStrategicMerge:
-  - argocd-repo-server.yaml
-
 configMapGenerator:
   - behavior: merge
     literals:
@@ -25,6 +22,11 @@ configMapGenerator:
     name: argocd-cm
 
 patches:
+  - path: argocd-repo-server.yaml
+    target:
+      kind: Deployment
+      name: argocd-repo-server
+
   - target:
       kind: Deployment
       name: argocd-redis
