test vault plugin

--- a/cluster/services.yaml
+++ b/cluster/services.yaml
@@ -43,6 +43,8 @@ spec:
         repoURL: '{{.source_url}}'
         path: '{{.source_path}}'
         targetRevision: '{{.source_version}}'
+        plugin:
+          name: argocd-vault-plugin  # Enable AVP
 
       destination:
         server: "https://kubernetes.default.svc"
