--- a/cluster/argocd/kustomization.yaml
+++ b/cluster/argocd/kustomization.yaml
@@ -6,7 +6,7 @@ namespace: argocd
 resources:
   - argocd-ns.yaml
   - github.com/argoproj/argo-cd/manifests/core-install?ref=v2.12.6
-  - cmp-plugin.yaml
+#  - cmp-plugin.yaml
 
 configMapGenerator:
   - behavior: merge
@@ -22,10 +22,10 @@ configMapGenerator:
     name: argocd-cm
 
 patches:
-  - path: argocd-repo-server.yaml
-    target:
-      kind: Deployment
-      name: argocd-repo-server
+#  - path: argocd-repo-server.yaml
+#    target:
+#      kind: Deployment
+#      name: argocd-repo-server
 
   - target:
       kind: Deployment
