--- a/cluster/argocd/argocd-repo-server.yaml
+++ b/cluster/argocd/argocd-repo-server.yaml
@@ -29,7 +29,7 @@ spec:
           command: [sh, -c]
           args:
             - >-
-              curl -L https://github.com/argoproj-labs/argocd-vault-plugin/releases/download/v$(AVP_VERSION)/argocd-vault-plugin_$(AVP_VERSION)_linux_amd64 -o argocd-vault-plugin &&
+              curl -L https://github.com/argoproj-labs/argocd-vault-plugin/releases/download/v$(AVP_VERSION)/argocd-vault-plugin_$(AVP_VERSION)_linux_arm64 -o argocd-vault-plugin &&
               chmod +x argocd-vault-plugin &&
               mv argocd-vault-plugin /custom-tools/
 
@@ -37,78 +37,88 @@ spec:
             - mountPath: /custom-tools
               name: custom-tools
 
-      # argocd-vault-plugin with Helm
       containers:
-        - name: avp-helm
-          command: [/var/run/argocd/argocd-cmp-server]
-          image: quay.io/argoproj/argocd:v2.7.9
-          securityContext:
-            runAsNonRoot: true
-            runAsUser: 999
+        - name: argocd-repo-server
           volumeMounts:
-            - mountPath: /var/run/argocd
-              name: var-files
-            - mountPath: /home/argocd/cmp-server/plugins
-              name: plugins
-            - mountPath: /tmp
-              name: tmp
-
-            # Register plugins into sidecar
-            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
-              subPath: avp-helm.yaml
-              name: cmp-plugin
-
-            # Important: Mount tools into $PATH
             - name: custom-tools
-              subPath: argocd-vault-plugin
               mountPath: /usr/local/bin/argocd-vault-plugin
-
-        # argocd-vault-plugin with Kustomize
-        - name: avp-kustomize
-          command: [/var/run/argocd/argocd-cmp-server]
-          image: quay.io/argoproj/argocd:v2.7.9
-          securityContext:
-            runAsNonRoot: true
-            runAsUser: 999
-          volumeMounts:
-            - mountPath: /var/run/argocd
-              name: var-files
-            - mountPath: /home/argocd/cmp-server/plugins
-              name: plugins
-            - mountPath: /tmp
-              name: tmp
-
-            # Register plugins into sidecar
-            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
-              subPath: avp-kustomize.yaml
-              name: cmp-plugin
-
-            # Important: Mount tools into $PATH
-            - name: custom-tools
               subPath: argocd-vault-plugin
-              mountPath: /usr/local/bin/argocd-vault-plugin
+          envFrom:
+            - secretRef:
+                name: argocd-vault-plugin-credentials
 
-        # argocd-vault-plugin with plain YAML
-        - name: avp
-          command: [/var/run/argocd/argocd-cmp-server]
-          image: quay.io/argoproj/argocd:v2.7.9
-          securityContext:
-            runAsNonRoot: true
-            runAsUser: 999
-          volumeMounts:
-            - mountPath: /var/run/argocd
-              name: var-files
-            - mountPath: /home/argocd/cmp-server/plugins
-              name: plugins
-            - mountPath: /tmp
-              name: tmp
-
-            # Register plugins into sidecar
-            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
-              subPath: avp.yaml
-              name: cmp-plugin
-
-            # Important: Mount tools into $PATH
-            - name: custom-tools
-              subPath: argocd-vault-plugin
-              mountPath: /usr/local/bin/argocd-vault-plugin
+#      # argocd-vault-plugin with Helm
+#      containers:
+#        - name: avp-helm
+#          command: [/var/run/argocd/argocd-cmp-server]
+#          image: quay.io/argoproj/argocd:v2.7.9
+#          securityContext:
+#            runAsNonRoot: true
+#            runAsUser: 999
+#          volumeMounts:
+#            - mountPath: /var/run/argocd
+#              name: var-files
+#            - mountPath: /home/argocd/cmp-server/plugins
+#              name: plugins
+#            - mountPath: /tmp
+#              name: tmp
+#
+#            # Register plugins into sidecar
+#            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
+#              subPath: avp-helm.yaml
+#              name: cmp-plugin
+#
+#            # Important: Mount tools into $PATH
+#            - name: custom-tools
+#              subPath: argocd-vault-plugin
+#              mountPath: /usr/local/bin/argocd-vault-plugin
+#
+#        # argocd-vault-plugin with Kustomize
+#        - name: avp-kustomize
+#          command: [/var/run/argocd/argocd-cmp-server]
+#          image: quay.io/argoproj/argocd:v2.7.9
+#          securityContext:
+#            runAsNonRoot: true
+#            runAsUser: 999
+#          volumeMounts:
+#            - mountPath: /var/run/argocd
+#              name: var-files
+#            - mountPath: /home/argocd/cmp-server/plugins
+#              name: plugins
+#            - mountPath: /tmp
+#              name: tmp
+#
+#            # Register plugins into sidecar
+#            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
+#              subPath: avp-kustomize.yaml
+#              name: cmp-plugin
+#
+#            # Important: Mount tools into $PATH
+#            - name: custom-tools
+#              subPath: argocd-vault-plugin
+#              mountPath: /usr/local/bin/argocd-vault-plugin
+#
+#        # argocd-vault-plugin with plain YAML
+#        - name: avp
+#          command: [/var/run/argocd/argocd-cmp-server]
+#          image: quay.io/argoproj/argocd:v2.7.9
+#          securityContext:
+#            runAsNonRoot: true
+#            runAsUser: 999
+#          volumeMounts:
+#            - mountPath: /var/run/argocd
+#              name: var-files
+#            - mountPath: /home/argocd/cmp-server/plugins
+#              name: plugins
+#            - mountPath: /tmp
+#              name: tmp
+#
+#            # Register plugins into sidecar
+#            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
+#              subPath: avp.yaml
+#              name: cmp-plugin
+#
+#            # Important: Mount tools into $PATH
+#            - name: custom-tools
+#              subPath: argocd-vault-plugin
+#              mountPath: /usr/local/bin/argocd-vault-plugin
