--- a/cluster/argocd/kustomization.yaml
+++ b/cluster/argocd/kustomization.yaml
@@ -6,6 +6,7 @@ namespace: argocd
 resources:
   - argocd-ns.yaml
   - github.com/argoproj/argo-cd/manifests/core-install?ref=v2.12.6
+  - argocd-vault-plugin-credentials.yaml
 #  - cmp-plugin.yaml
 
 configMapGenerator:
@@ -22,10 +23,14 @@ configMapGenerator:
     name: argocd-cm
 
 patches:
-#  - path: argocd-repo-server.yaml
-#    target:
-#      kind: Deployment
-#      name: argocd-repo-server
+  - path: argocd-cm.yaml
+    target:
+      kind: ConfigMap
+      name: argocd-cm
+  - path: argocd-repo-server.yaml
+    target:
+      kind: Deployment
+      name: argocd-repo-server
 
   - target:
       kind: Deployment
