--- a/cluster/argocd/kustomization.yaml
+++ b/cluster/argocd/kustomization.yaml
@@ -5,7 +5,8 @@ namespace: argocd
 
 resources:
   - argocd-ns.yaml
-  - github.com/argoproj/argo-cd/manifests/core-install?ref=v2.12.6
+#  - github.com/argoproj/argo-cd/manifests/core-install?ref=v2.12.6
+  - github.com/argoproj/argo-cd/manifests/cluster-install?ref=v2.7.9
   - argocd-vault-plugin-credentials.yaml
 #  - cmp-plugin.yaml
 
@@ -27,6 +28,7 @@ patches:
     target:
       kind: ConfigMap
       name: argocd-cm
+
   - path: argocd-repo-server.yaml
     target:
       kind: Deployment
