--- a/cluster/argocd/kustomization.yaml
+++ b/cluster/argocd/kustomization.yaml
@@ -5,8 +5,9 @@ namespace: argocd
 
 resources:
   - argocd-ns.yaml
-#  - github.com/argoproj/argo-cd/manifests/core-install?ref=v2.12.6
-  - github.com/argoproj/argo-cd/manifests/cluster-install?ref=v2.7.9
+  - github.com/argoproj/argo-cd/manifests/core-install?ref=v2.12.6
+#  - github.com/argoproj/argo-cd/manifests/cluster-install?ref=v2.7.9
+  - auth-delegator-cluster-role-binding.yaml
   - argocd-vault-plugin-credentials.yaml
 #  - cmp-plugin.yaml
 
