--- a/cluster/services.yaml
+++ b/cluster/services.yaml
@@ -53,51 +53,51 @@ spec:
           allowEmpty: true
           selfHeal: true
 
-#  templatePatch: |
-#    {{- if .create_namespace }}
-#    spec:
-#      syncPolicy:
-#        syncOptions:
-#          - CreateNamespace=true
-#        {{- if .namespace_labels }}
-#        managedNamespaceMetadata:
-#          labels:
-#            {{- range $labelKeyPair := .namespace_labels }}
-#            {{ $labelKeyPair }}
-#            {{- end }}
-#        {{- end }}
-#    {{- end }}
-#
-#    {{- if .helm_values }}
-#    spec:
-#      source:
-#        kustomize:
-#          patches:
-#            - target:
-#                kind: Application
-#                name: {{ .name }}
-#              patch: |
-#                - op: add
-#                  path: /spec/sources/0/helm/parameters
-#                  value:
-#                  {{- range $param:= .helm_values }}
-#                    - name: {{ $param.key }}
-#                      value: '{{ $param.value }}'
-#                  {{- end }}
-#    {{- end }}
-#
-#    {{- if .kustomization_values }}
-#    spec:
-#      source:
-#        kustomize:
-#          patches:
-#          {{- range $kustomization:= .kustomization_values }}
-#            - target:
-#                kind: {{ $kustomization.kind }}
-#                name: {{ $kustomization.name }}
-#              patch: |
-#                - op: add
-#                  path: {{ $kustomization.path }}
-#                  value: {{ $kustomization.value }}
-#          {{- end }}
-#    {{- end }}
+  templatePatch: |
+    {{- if .create_namespace }}
+    spec:
+      syncPolicy:
+        syncOptions:
+          - CreateNamespace=true
+        {{- if .namespace_labels }}
+        managedNamespaceMetadata:
+          labels:
+            {{- range $labelKeyPair := .namespace_labels }}
+            {{ $labelKeyPair }}
+            {{- end }}
+        {{- end }}
+    {{- end }}
+
+    {{- if .helm_values }}
+    spec:
+      source:
+        kustomize:
+          patches:
+            - target:
+                kind: Application
+                name: {{ .name }}
+              patch: |
+                - op: add
+                  path: /spec/sources/0/helm/parameters
+                  value:
+                  {{- range $param:= .helm_values }}
+                    - name: {{ $param.key }}
+                      value: '{{ $param.value }}'
+                  {{- end }}
+    {{- end }}
+
+    {{- if .kustomization_values }}
+    spec:
+      source:
+        kustomize:
+          patches:
+          {{- range $kustomization:= .kustomization_values }}
+            - target:
+                kind: {{ $kustomization.kind }}
+                name: {{ $kustomization.name }}
+              patch: |
+                - op: add
+                  path: {{ $kustomization.path }}
+                  value: {{ $kustomization.value }}
+          {{- end }}
+    {{- end }}
