--- a/cluster/services.yaml
+++ b/cluster/services.yaml
@@ -45,7 +45,7 @@ spec:
         targetRevision: '{{.source_version}}'
 
         plugin:
-          name: argocd-vault-plugin-helm
+          name: argocd-vault-plugin
           env:
             - name: VAULT_NAMESPACE
               value: admin
