--- a/cluster/argocd/argocd-repo-server.yaml
+++ b/cluster/argocd/argocd-repo-server.yaml
@@ -89,30 +89,30 @@ spec:
               subPath: argocd-vault-plugin
               mountPath: /usr/local/bin/argocd-vault-plugin
 
-        # argocd-vault-plugin with plain YAML
-        - name: avp
-          command: [ /var/run/argocd/argocd-cmp-server ]
-          image: quay.io/argoproj/argocd:v2.12.6
-          securityContext:
-            runAsNonRoot: true
-            runAsUser: 999
-          envFrom:
-            - secretRef:
-                name: argocd-vault-plugin-credentials
-          volumeMounts:
-            - mountPath: /var/run/argocd
-              name: var-files
-            - mountPath: /home/argocd/cmp-server/plugins
-              name: plugins
-            - mountPath: /tmp
-              name: tmp
-
-            # Register plugins into sidecar
-            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
-              subPath: avp.yaml
-              name: cmp-plugin
-
-            # Important: Mount tools into $PATH
-            - name: custom-tools
-              subPath: argocd-vault-plugin
-              mountPath: /usr/local/bin/argocd-vault-plugin
+#        # argocd-vault-plugin with plain YAML
+#        - name: avp
+#          command: [ /var/run/argocd/argocd-cmp-server ]
+#          image: quay.io/argoproj/argocd:v2.12.6
+#          securityContext:
+#            runAsNonRoot: true
+#            runAsUser: 999
+#          envFrom:
+#            - secretRef:
+#                name: argocd-vault-plugin-credentials
+#          volumeMounts:
+#            - mountPath: /var/run/argocd
+#              name: var-files
+#            - mountPath: /home/argocd/cmp-server/plugins
+#              name: plugins
+#            - mountPath: /tmp
+#              name: tmp
+#
+#            # Register plugins into sidecar
+#            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
+#              subPath: avp.yaml
+#              name: cmp-plugin
+#
+#            # Important: Mount tools into $PATH
+#            - name: custom-tools
+#              subPath: argocd-vault-plugin
+#              mountPath: /usr/local/bin/argocd-vault-plugin
