manage namespace in cluster kustomization after bootstrapping

--- a/cluster/argocd/kustomization.yaml
+++ b/cluster/argocd/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 namespace: argocd
 
 resources:
+  - argocd-ns.yaml
   - https://github.com/argoproj/argo-cd/manifests/core-install?ref=v2.12.6
   - cmp-plugin.yaml
 
