--- a/test/e2e/argocd-vault-plugin/source/example-secret.yaml
+++ b/test/e2e/argocd-vault-plugin/source/example-secret.yaml
@@ -3,8 +3,6 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: example-secret
-  annotations:
-    avp.kubernetes.io/path: "avp/data/test"
 type: Opaque
 stringData:
-  sample-secret: <sample>
+  sample-secret: <path:avp/data/test#sample>
