add vault namespace env var to services applicationset for vault plugin

--- a/test/e2e/argocd-vault-plugin/sample-secret.yaml
+++ b/test/e2e/argocd-vault-plugin/sample-secret.yaml
@@ -12,11 +12,11 @@ spec:
     path: test/e2e/argocd-vault-plugin/source
     repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
 
-    plugin:
-      name: argocd-vault-plugin
-      env:
-        - name: VAULT_NAMESPACE
-          value: admin
+#    plugin:
+#      name: argocd-vault-plugin
+#      env:
+#        - name: VAULT_NAMESPACE
+#          value: admin
 
   destination:
     server: https://kubernetes.default.svc
