--- a/test/e2e/argocd-vault-plugin/source/cluster-secret-store.yaml
+++ b/test/e2e/argocd-vault-plugin/source/cluster-secret-store.yaml
@@ -6,11 +6,11 @@ metadata:
 spec:
   provider:
     vault:
-      server: <path:avp/data/test#sample>
+      server: <path:test/svc/vault#vault_address>
       path: secret
       version: v2
       auth:
         kubernetes:
-          mountPath: "ocal-minikube-us-east-0"
+          mountPath: "local-minikube-us-east-0"
           role: "di-admin-kubernetes-role"
       namespace: admin
