--- a/environments/local-minikube-us-east-0/cluster-secrets.yaml
+++ b/environments/local-minikube-us-east-0/cluster-secrets.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: sample-secret
+  name: cluster-secrets
   namespace: argocd
 
 spec:
