--- a/environments/local-minikube-us-east-0/cluster-secrets.yaml
+++ b/environments/local-minikube-us-east-0/cluster-secrets.yaml
@@ -11,15 +11,15 @@ spec:
   source:
     path: secrets
     repoURL: https://github.com/IanHewlett/demo-platform-service-external-secrets.git
-    kustomize:
-      patches:
-        - target:
-            kind: ClusterSecretStore
-            name: vault-admin
-          patch: |
-            - op: add
-              path: /spec/provider/vault/auth/kubernetes/mountPath
-              value: local-minikube-us-east-0
+#    kustomize:
+#      patches:
+#        - target:
+#            kind: ClusterSecretStore
+#            name: vault-admin
+#          patch: |
+#            - op: add
+#              path: /spec/provider/vault/auth/kubernetes/mountPath
+#              value: local-minikube-us-east-0
 
   destination:
     server: https://kubernetes.default.svc
