--- a/test/e2e/argocd-vault-plugin/source/example-secret.yaml
+++ b/test/e2e/argocd-vault-plugin/source/example-secret.yaml
@@ -3,6 +3,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: example-secret
+  namespace: test-secret
 type: Opaque
 stringData:
   sample-secret: <path:avp/data/test#sample>
