--- a/environments/local-minikube-us-east-0/cluster-secrets.yaml
+++ b/environments/local-minikube-us-east-0/cluster-secrets.yaml
@@ -12,7 +12,7 @@ spec:
     path: secrets
     repoURL: https://github.com/IanHewlett/demo-platform-service-external-secrets.git
     plugin:
-      name: argocd-vault-plugin
+      name: argocd-vault-plugin-kustomize
     kustomize:
       patches:
         - target:
