--- a/test/e2e/argocd-vault-plugin/sample-secret.yaml
+++ b/test/e2e/argocd-vault-plugin/sample-secret.yaml
@@ -20,7 +20,8 @@ spec:
 
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: test-secret
 
   syncPolicy:
-    automated: {}
+    syncOptions:
+      - CreateNamespace=true
