create namespace during vault plugin e2e test

--- a/test/e2e/argocd-vault-plugin/sample-secret.yaml
+++ b/test/e2e/argocd-vault-plugin/sample-secret.yaml
@@ -9,8 +9,8 @@ spec:
   project: default
 
   source:
-    path: test/e2e/argocd-vault-plugin/source
     repoURL: https://github.com/IanHewlett/demo-platform-extension-argocd.git
+    path: test/e2e/argocd-vault-plugin/source
 
 #    plugin:
 #      name: argocd-vault-plugin
@@ -23,5 +23,8 @@ spec:
     namespace: test-secret
 
   syncPolicy:
+    automated:
+      allowEmpty: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
