--- a/cluster/services.yaml
+++ b/cluster/services.yaml
@@ -58,6 +58,23 @@ spec:
     {{- if or .helm_values .create_namespace .kustomization_values }}
     spec:
 
+      {{- if .helm_chart_values }}
+      source:
+        kustomize:
+          patches:
+            - target:
+                kind: Application
+                name: {{ .name }}
+              patch: |
+                - op: add
+                  path: /spec/source/helm/parameters
+                  value:
+                  {{- range $param:= .helm_values }}
+                    - name: {{ $param.key }}
+                      value: '{{ $param.value }}'
+                  {{- end }}
+      {{- end }}
+
       {{- if .helm_values }}
       source:
         kustomize:
