--- a/.github/workflows/minikube.yaml
+++ b/.github/workflows/minikube.yaml
@@ -36,4 +36,8 @@ jobs:
 #        run: ./scripts/ready.sh
 
       - name: Try the cluster!
-        run: kubectl get pods -A
+        run: |
+          kubectl get pods -A
+          kubectl get applications -A
+          kubectl get applicationsets -A
+          kubectl get appprojects -A
