--- a/.github/workflows/minikube.yaml
+++ b/.github/workflows/minikube.yaml
@@ -32,8 +32,8 @@ jobs:
 #      - name: run spec test for the argocd core installation
 #        run: ./scripts/test.sh
 
-#      - name: wait for argocd core installation to be ready
-#        run: ./scripts/ready.sh
+      - name: wait for argocd core installation to be ready
+        run: ./scripts/ready.sh
 
       - name: Try the cluster!
         run: |
