--- a/environments/demo/mesh/sync.yaml
+++ b/environments/demo/mesh/sync.yaml
@@ -18,7 +18,7 @@ spec:
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cluster
+  name: sync
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
